--- a/README
+++ b/README
@@ -10,7 +10,7 @@ When successful, type this for help on the syntax:
 
 	Calculates the incision and water flow across an overtopping lake.
 	Author: Daniel Garcia-Castellanos, 2009-2017, danielgc@ictja.csic.es
-	License: GPL/Creative Commons 3.0 BY-SA. This are the scientific 
+	License: GPL/Creative Commons 3.0 BY-SA. These are the scientific 
 	references to cite: 
 
 	Garcia-Castellanos & O'Connor, 2017. Megaflood erosion consistent
