--- a/README
+++ b/README
@@ -8,14 +8,14 @@ When successful, type this for help on the syntax:
 
 Author: Daniel Garcia-Castellanos, 2009-2017, danielgc@ictja.csic.es
 License: GPL/Creative Commons 3.0 BY-SA. 
-Scientific references to cite: 
+Citation: 
 
-	Garcia-Castellanos & O'Connor, 2017. Megaflood erosion consistent
-	with long-term landscape evolution. In progress. 
+	Garcia-Castellanos & O'Connor, 2018. Outburst floods provide erodability
+	estimates consistent with long-term landscape evolution. Sci. Reports.
 
-	Garcia-Castellanos, D., F. Estrada, I. Jiménez-Munt, C. Gorini, 
-	M. Fernàndez, J. Vergés, R. De Vicente, 2009. Catastrophic 
-	flood of the Mediterranean after the Messinian salinity 
-	crisis. Nature 462, 778-781, doi:10.1038/nature08555
+	Garcia-Castellanos, D., F. Estrada, I. Jiménez-Munt, C. Gorini, M. 
+	Fernàndez, J. Vergés, R. De Vicente, 2009. Catastrophic flood of 
+	the Mediterranean after the Messinian salinity crisis. 
+	Nature 462, 778-781, doi:10.1038/nature08555
 
 
